fixed overlap issue on homepage

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -519,6 +519,7 @@
 
   #community {
     // position: static;
+    z-index:1;
 
     .graphics {
       position: absolute;
